--- a/app/views/event_shopping_lists/show.html.slim
+++ b/app/views/event_shopping_lists/show.html.slim
@@ -4,7 +4,7 @@ h2.text-2xl.font-bold nákupy na #{@event.name}
   = "zpět na akci"
 
 - @shopping_list.shoppings.each do |shopping|
-  h3.text-2xl = "nákup #{shopping.date.strftime("%d. %m. %Y")}"
+  h3.text-2xl = shopping.name
 
   table
     thead
@@ -13,8 +13,8 @@ h2.text-2xl.font-bold nákupy na #{@event.name}
         th.množství
     tbody
     - shopping.ingredients_with_usage.group_by {|i| i.first.category }.each do |category, ingredients_with_usage|
-      tr
-        td.pe-10
+      tr.pe-12
+        td
           h4.text-lg.font-bold = category&.name || "nezařazené"
       - ingredients_with_usage.each do |ingredient_with_usage|
         - ingredient = ingredient_with_usage.first
@@ -24,3 +24,12 @@ h2.text-2xl.font-bold nákupy na #{@event.name}
         tr
           td = ingredient.name
           td = "#{amount.round(1)} #{ingredient.measurement.name}"
+
+        - usage[:recipes].each do |day_recipe_with_values|
+          - day_recipe = day_recipe_with_values.second[:day_recipe]
+          - amount = day_recipe_with_values.second[:amount]
+          tr.italic
+            td.ps-4.pe-24
+              = day_recipe.recipe.name
+              = "(#{formatted_date(day_recipe.date)} - #{weekday_name(day_recipe.date)})"
+            td = "#{amount.round(1)} #{ingredient.measurement.name}"
