--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -6,8 +6,11 @@ div.border.border-2.rounded-xl.shadow.text-center id="#{day_dom_id}-card" class=
     div.text-xl.mt-2
         - if daily_plan.present?
             = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700" do 
-                = "#{t("date.day_names")[day.date.wday]}"
-        p.italic.text-sm = "#{day.date.strftime("%d.%m.%Y")}"
+                = weekday_name(day.date)
+
+        - else
+            = weekday_name(day.date)
+        p.italic.text-sm = formatted_date(day.date)
     
     - if daily_plan.present?
         div.overflow-hidden.mb-3 id="#{day_dom_id}-recipes"
