--- a/app/views/recipes/_ingredients_edit.html.slim
+++ b/app/views/recipes/_ingredients_edit.html.slim
@@ -11,7 +11,7 @@
 
     #add-ingredient.mb-4
       = default_form_for "", url: recipe_ingredients_path(recipe_id: recipe.id), method: :post do |form|
-        - unused_ingredients = Current.user.ingredients - recipe.ingredients
+        - unused_ingredients = current_user.ingredients - recipe.ingredients
         = form.input :ingredient_id, :as => :grouped_select, collection: [['moje',  unused_ingredients.collect {|v| [ v.name_with_unit, v.id ] }],
                                              ['veřejné', Ingredient.published.collect {|v| [ v.name_with_unit, v.id ] }]],
                                              col_span: 4, :group_method => :last, label: false, allow_blank: false
@@ -22,7 +22,7 @@
         
       / = form_tag recipe_ingredients_path(recipe_id: recipe.id), method: :post do
       /   .grid.grid-cols-4
-      /     - unused_ingredients = Current.user.ingredients - recipe.ingredients
+      /     - unused_ingredients = current_user.ingredients - recipe.ingredients
       /     div.grid.grid-cols-2
       /       = select_tag :ingredient_id, grouped_options_for_select([['moje',  unused_ingredients.collect {|v| [ v.name_with_unit, v.id ] }],
       /                                                           ['veřejné',  Ingredient.published.collect {|v| [ v.name_with_unit, v.id ] }],
