--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -23,7 +23,7 @@ div
 
   div 
       span.float-right
-      - if @recipe.liked_by?(Current.user)
+      - if @recipe.liked_by?(current_user)
         = action_button_to "odebrat z oblíbených", liked_recipe_path(@recipe), method: :delete
       - else
         = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: "heart"
