--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -14,15 +14,15 @@ nav.mt-4.mb-4
            a#navbarProfileDropdownLink data-dropdown-toggle="navbarProfileDropdown" data-dropdown-placement="bottom-end"
                 li.rounded-md.py-2.px-2.hover:bg-gray-200
                     span.block.py-4.pl-3.pr-4.text-black.rounded.hover:text-gray-900.md:hover:bg-transparent.md:border-0.md:p-0.dark:text-white.md:dark:hover:text-white.dark:hover:bg-gray-700.dark:hover:text-white.md:dark:hover:bg-transparent
-                        / = Current.user.profile_picture
-                        = Current.user.name 
-                        = Current.user.id
+                        / = current_user.profile_picture
+                        = current_user&.name || "nepřihlášen"
+                        = current_user&.id
                         = svg("dropdown-caret", class: "ml-1 w-4 h-4 inline")
                 
                 #navbarProfileDropdown.z-10.hidden.font-normal.bg-white.divide-y.divide-gray-100.rounded-lg.shadow.dark:bg-gray-700.dark:divide-gray-600.mr-5
-                    / = render "shared/navbar_link", link: "/members/#{Current.user.id}", icon: "settings", text: "spravovat můj profil a nastavení"
+                    / = render "shared/navbar_link", link: "/members/#{current_user.id}", icon: "settings", text: "spravovat můj profil a nastavení"
                     / = render "shared/navbar_link", link: "/accounting", icon: "plus", text: "přidat další skupinu"
-                    - if Current.user.admin?
+                    - if current_user&.admin?
                         hr
                         = render "shared/navbar_link", link: "/a/", icon: "administration", text: "administrace"
                     hr
