--- a/app/views/events/_day_recipe.html.slim
+++ b/app/views/events/_day_recipe.html.slim
@@ -1,5 +1,9 @@
 - skew_class = "x-#{["-",nil].sample}skew-y-#{rand(1..2)}"
 - offset_class = "x-ml-#{rand(2..4)} x-mr-#{rand(2..4)}"
 
-li.overflow-hidden.p-2.m-2.border.border-emerald-700.rounded.shadow.cursor-move.transform.hover:bg-emerald-700.hover:text-white.hover:scale-105.hover:skew-y-1.hover:shadow-md.transition-transform.duration-200.ease-in-out class=" #{skew_class} #{offset_class}" data-sortable-update-url=daily_plan_recipe_sort_path(daily_plan_recipe_id: daily_recipe.id) data-sortable-move-url=daily_plan_recipe_move_path(daily_plan_recipe_id: daily_recipe.id, )
-    span.truncate = daily_recipe.recipe.name
+- if daily_recipe.recipe.shopping?
+    li.overflow-hidden.p-2.m-2.border.border-gray-700.rounded.shadow.cursor-move.transform.hover:bg-gray-600.hover:text-white.hover:scale-105.hover:skew-y-1.hover:shadow-md.transition-transform.duration-200.ease-in-out class=" #{skew_class} #{offset_class}" data-sortable-update-url=daily_plan_recipe_sort_path(daily_plan_recipe_id: daily_recipe.id) data-sortable-move-url=daily_plan_recipe_move_path(daily_plan_recipe_id: daily_recipe.id, )
+        span.truncate = daily_recipe.recipe.name
+- else
+    li.overflow-hidden.p-2.m-2.border.border-emerald-700.rounded.shadow.cursor-move.transform.hover:bg-emerald-700.hover:text-white.hover:scale-105.hover:skew-y-1.hover:shadow-md.transition-transform.duration-200.ease-in-out class=" #{skew_class} #{offset_class}" data-sortable-update-url=daily_plan_recipe_sort_path(daily_plan_recipe_id: daily_recipe.id) data-sortable-move-url=daily_plan_recipe_move_path(daily_plan_recipe_id: daily_recipe.id, )
+        span.truncate = daily_recipe.recipe.name
