--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,18 +1,22 @@
+
 - content_for :title, @event.name
-- local_assigns[:override_title] = true
+- local_assigns[:header_class] = "inline-block"
 
-= turbo_frame_tag dom_id(@event) do
-  h1.text-3xl.text-strong.mb-2
-    = yield :title
-    = " (archivováno)" if @event.archived?
+- content_for :header do
+  = yield :title
+  = " (archivováno)" if @event.archived?
 
-  #details
-    div = "od #{@event.date_from} do #{@event.date_to}"
-    div = "#{@event.duration} dní"
-    div = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
+- content_for :header_right do
+  = button_link_to "upravit", edit_event_path(@event) if can? :update, @event
+  = action_button_to "smazat", event_path(@event), method: :delete, data: { confirm: "Opravdu smazat?" }, type: :dangerous, disabled: !@event.destroyable? if can? :destroy, @event
+
+
+#details
+  div = "od #{formatted_date(@event.date_from)} do #{formatted_date(@event.date_to)}"
+  div = "#{@event.duration} dní"
+  div = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
 
 #actions
-  = button_link_to "upravit", edit_event_path(@event)
 
   - if @event.published?
     span data={ controller: "clipboard", "clipboard-success-content-value": "zkopírováno"}
@@ -30,10 +34,9 @@
 
   = button_link_to "kopírovat", new_event_duplication_path(event_id: @event.id)
 
-  = action_button_to "smazat", event_path(@event), method: :delete, data: { confirm: "Opravdu smazat?" }, type: :dangerous, disabled: !@event.destroyable?
 
-#days
-  .grid.grid-cols-7.gap-3
+= turbo_frame_tag id="#{dom_id(@event)}-days"
+  .grid.md:grid-cols-7.gap-3
     - @event.timetable.days.each do |day|
       = render("day_card", day: )
 
