--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,17 +18,25 @@ html
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
 
+    / = turbo_refreshes_with method: :morph, scroll: :preserve
+    / meta name="turbo-refresh-method" content="morph"
+    / meta name="turbo-refresh-scroll" content="preserve"
+
   body.mx-auto.sm:px-4.max-w-screen-2xl
     = render("shared/flash")
-    - if current_user.present?
-      = render("shared/navbar")
-    - else
-      = render("shared/public_navbar")
+    = render("shared/navbar")
+
     - unless local_assigns[:override_title].present? && local_assigns[:override_title] == true
-      h1.text-3xl.text-strong.mb-2
-        - if content_for?(:header)
-          = yield(:header)
-        - else
-          = yield(:title)
+      div
+        h1.text-3xl.text-strong.mb-2 class="#{local_assigns[:header_class]}"
+          - if content_for?(:header)
+            = yield(:header)
+          - else
+            = yield(:title)
+        span.float-right
+          - if content_for?(:header_right)
+            = yield(:header_right)
+          - else
+            = yield(:header_right)
     = yield
     / = render("shared/mobile_navbar")
