--- a/app/views/event_shopping_lists/show.html.slim
+++ b/app/views/event_shopping_lists/show.html.slim
@@ -23,7 +23,7 @@ h2.text-2xl.font-bold nákupy na #{@event.name}
 
         tr
           td = ingredient.name
-          td = "#{amount.round(1)} #{ingredient.measurement.name}"
+          td = "#{amount.round(1)} #{ingredient.measurement&.name}"
 
         - usage[:recipes].each do |day_recipe_with_values|
           - day_recipe = day_recipe_with_values.second[:day_recipe]
@@ -32,4 +32,4 @@ h2.text-2xl.font-bold nákupy na #{@event.name}
             td.ps-4.pe-24
               = day_recipe.recipe.name
               = " (#{formatted_date(day_recipe.date)} - #{weekday_name(day_recipe.date)})"
-            td = "#{amount.round(1)} #{ingredient.measurement.name}"
+            td = "#{amount.round(1)} #{ingredient.measurement&.name}"
