--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -42,4 +42,5 @@
 
 
 = button_link_to "nákupní seznam", event_shopping_list_path(@event)
+= button_link_to "kuchařka", event_cookbook_path(@event)
       
