--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -6,7 +6,7 @@
 div.border.border-2.rounded-xl.shadow.text-center id="#{day_dom_id}-card" class=border_color_class
     div.text-xl.mt-2
         - if daily_plan.present?
-            = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700" do 
+            = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700", data: {turbo: false} do 
                 = weekday_name(day.date)
 
         - else
