--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -42,5 +42,6 @@
 
 
 = button_link_to "nákupní seznam", event_shopping_list_path(@event), target: "_blank"
+= button_link_to "nákupní seznam (pdf)", event_shopping_list_path(@event, format: :pdf), target: "_blank"
 = button_link_to "kuchařka (pdf)", event_cookbook_path(@event, format: :pdf), target: "_blank"
       
