--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -17,20 +17,20 @@
   div = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
 
 #actions
+  - if @event.archived?
+    = action_button_to "odarchivovat", archived_event_path(@event), method: :delete
+  - else
+    = action_button_to "archivovat", archived_events_path(event_id: @event.id), method: :post
 
   - if @event.published?
     span data={ controller: "clipboard", "clipboard-success-content-value": "zkopírováno"}
       span.hidden data={ "clipboard-target": "source" } = @event.public_url
-      = button_tag "veřejný link", data: { clipboard_target: "button", action: "clipboard#copy" }
+      = button_tag "veřejný link", data: { clipboard_target: "button", action: "clipboard#copy" }, class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:secondary]
     
     = action_button_to "zrušit zveřejnění", published_event_path(@event), method: :delete
   - else
     = action_button_to "zveřejnit", published_events_path(event_id: @event.id), method: :post
 
-  - if @event.archived?
-    = action_button_to "odarchivovat", archived_event_path(@event), method: :delete
-  - else
-    = action_button_to "archivovat", archived_events_path(event_id: @event.id), method: :post
 
   = button_link_to "kopírovat", new_event_duplication_path(event_id: @event.id)
 
@@ -40,8 +40,9 @@
     - @event.timetable.days.each do |day|
       = render("day_card", day: )
 
-
-= button_link_to "nákupní seznam", event_shopping_list_path(@event), target: "_blank"
-= button_link_to "nákupní seznam (pdf)", event_shopping_list_path(@event, format: :pdf), target: "_blank"
-= button_link_to "kuchařka (pdf)", event_cookbook_path(@event, format: :pdf), target: "_blank"
+div.mt-2
+  h2.text-xl = "Exporty"
+  = button_link_to "nákupní seznam", event_shopping_list_path(@event), target: "_blank"
+  = button_link_to "nákupní seznam (pdf)", event_shopping_list_path(@event, format: :pdf), target: "_blank"
+  = button_link_to "kuchařka (pdf)", event_cookbook_path(@event, format: :pdf), target: "_blank"
       
