--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -10,22 +10,13 @@ nav.mt-4.mb-4
             = render "shared/navbar_link", link: events_path, icon: "calendar", text: "akce"
             = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "databáze receptů"
 
+        
         ul.flex.ml-auto.cursor-pointer
-           a#navbarProfileDropdownLink data-dropdown-toggle="navbarProfileDropdown" data-dropdown-placement="bottom-end"
-                li.rounded-md.py-2.px-2.hover:bg-gray-200
-                    span.block.py-4.pl-3.pr-4.text-black.rounded.hover:text-gray-900.md:hover:bg-transparent.md:border-0.md:p-0.dark:text-white.md:dark:hover:text-white.dark:hover:bg-gray-700.dark:hover:text-white.md:dark:hover:bg-transparent
-                        / = current_user.profile_picture
-                        = current_user&.name || "nepřihlášen"
-                        = current_user&.id
-                        = svg("dropdown-caret", class: "ml-1 w-4 h-4 inline")
-                
-                #navbarProfileDropdown.z-10.hidden.font-normal.bg-white.divide-y.divide-gray-100.rounded-lg.shadow.dark:bg-gray-700.dark:divide-gray-600.mr-5
-                    / = render "shared/navbar_link", link: "/members/#{current_user.id}", icon: "settings", text: "spravovat můj profil a nastavení"
-                    / = render "shared/navbar_link", link: "/accounting", icon: "plus", text: "přidat další skupinu"
-                    - if current_user&.admin?
-                        hr
-                        = render "shared/navbar_link", link: "/a/", icon: "administration", text: "administrace"
-                    hr
-                    = render "shared/navbar_link", link: "/sign_out", icon: "logout", text: "odhlásit se"
-                    = button_to "odhlásit se", destroy_user_session_path, method: :delete
+            button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button"
+                = current_user.name || current_user.email
+                = svg("dropdown-caret", class: "ml-1 w-4 h-4 inline")
 
+            div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+                ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"
+                    li.ps-2
+                        = button_to "odhlásit se", destroy_user_session_path, method: :delete, class: "hover:underline hover:emerald-600 hover:decoration-emerald-700 hover:decoration-4"
