--- a/app/views/ingredients/show.html.slim
+++ b/app/views/ingredients/show.html.slim
@@ -1,16 +1,15 @@
 - content_for :title, @ingredient.name
-- local_assigns[:header_class] = "inline-block"
 
 - content_for :header_right do
   = button_link_to "upravit", edit_ingredient_path(@ingredient)
   - if @ingredient.deletable?
     = action_button_to "smazat", @ingredient, type: :dangerous, method: :delete
   - else
-    = action_button_to "je v receptu, nelze smazat", @ingredient, method: :delete, disabled: true
+    = action_button_to "nelze smazat", @ingredient, method: :delete, disabled: true
 
-.grid.grid-cols-2
+.sm:grid.sm:grid-cols-2
 
-  #details
+  #details.mb-3
     = @ingredient.description
     br
 
@@ -23,14 +22,20 @@
       = @ingredient.category&.name
 
 
-  #recipes
+  div
+    - current_user_recipes = @ingredient.recipes.created_by(current_user)
+    - other_user_recipes = @ingredient.recipes.not_created_by(current_user)
+
     h3.text-xl moje recepty se surovinou
-    - @ingredient.recipes.created_by(current_user).each do |recipe|
+    ul
+    - current_user_recipes.each do |recipe|
       li = link_to recipe.name, recipe
 
-    h3.text-xl všechny recepty se surovinou
-    - @ingredient.recipes.each do |recipe|
-      li = link_to recipe.name, recipe
+    / - if current_user.admin?
+    /   h3.text-xl.mt-3 recepty se surovinou ostatních
+    /   ul
+    /   - other_user_recipes.each do |recipe|
+    /     li = link_to recipe.name, recipe
 
 
 
