--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -3,7 +3,7 @@
 - border_color_class = daily_plan.present? ? "border-emerald-600" : "border-gray-300"
 - border_color_class += " hidden md:inline" unless daily_plan.present?
 
-div.border.border-2.rounded-xl.shadow.text-center id="#{day_dom_id}-card" class=border_color_class
+div.border.border-2.rounded-xl.shadow.text-center.w-full id="#{day_dom_id}-card" class=border_color_class
     div.text-xl.mt-2
         - if daily_plan.present?
             = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-emerald-700", data: {turbo: false} do 
