--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,15 +1,16 @@
 - content_for :title, 'akce'
 
+- content_for :header_right do
+  = button_link_to "přidat akci", new_event_path, class: "float-right"
+
 div.me-5.mb-2
   - placeholder = current_user.events.order("RAND()").limit(1).first&.name
-  = simple_form_for "", url: events_path, method: :get, html: {class: "inline-block", data: {"controller": "form", "turbo-frame": "events"}} do |f|
-    = f.input :query, label: false, placeholder: "např. #{placeholder}", input_html: {class: "rounded-md focus:ring-green-700 focus:border-green-700", data: {action: "input->form#submit"}, value: params[:name]}, autofocus: true
-  = button_link_to "přidat akci", new_event_path, class: "float-right"
+  = searchbox(path: events_path, placeholder: placeholder, target_turbo_frame: "events")
 
 = turbo_frame_tag :events
   #future-events
     h2.text-xl.text-bold.mb-2 budoucí akce
-    = table @events.future do |t|
+    = table @events.active.future do |t|
       = t.column :název do |event|
         = link_to event.name, event, class: "font-bold", data: {turbo_frame: "_top"}
       = t.column :datum do |event|
@@ -17,7 +18,7 @@ div.me-5.mb-2
       
   #past-events
     h2.text-xl.text-bold.mb-2 skončené akce
-    = table @events.past do |t|
+    = table @events.active.past do |t|
       = t.column :název do |event|
         = link_to event.name, event, data: {turbo_frame: "_top"}
       = t.column :datum do |event|
