--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -5,8 +5,7 @@
 
 div.me-5
   - placeholder = current_user.ingredients.order("RAND()").limit(1).first&.name
-  = simple_form_for "", url: ingredients_path, method: :get, html: {class: "inline-block", data: {"controller": "form", "turbo-frame": "ingredients"}} do |f|
-    = f.input :query, label: false, placeholder: "např. #{placeholder}", input_html: {class: "rounded-md focus:ring-green-700 focus:border-green-700", data: {action: "input->form#submit"}, value: params[:name]}, autofocus: true
+  = searchbox(placeholder: , path: ingredients_path, target_turbo_frame: :ingredients)
 
 = turbo_frame_tag :ingredients
   = table @ingredients do |t|
