Add mobile navbar

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -44,4 +44,4 @@ html
           - else
             = yield(:header_right)
     = yield
-    / = render("shared/mobile_navbar")
+    = render("shared/mobile_navbar") if current_user.present?
