--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav.mt-4.mb-4
+nav.mt-4.mb-4.hidden.sm:block
     .flex.flex-wrap.items-center.py-3.px-4.mx-auto.border.border-0.border-b-2.border-green-900
         a href="/"
             / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
