--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -13,7 +13,10 @@
   div = "od #{formatted_date(@event.date_from)} do #{formatted_date(@event.date_to)}"
   div = "#{@event.duration} dní"
   div
-    = link_to "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)", event_portion_types_path(@event) 
+    = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
+    
+  #attendance.inline.float-right
+    = link_to "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)", event_portion_types_path(@event)
 
 #actions
   - if @event.archived?
