--- a/app/views/event_attendees/index.html.slim
+++ b/app/views/event_attendees/index.html.slim
@@ -1,6 +1,6 @@
-p style="color: green" = notice
-
 h1 Event attendees
+
+= render "event_attendance/menu"
 
 #event_attendees
   - @event_attendees.each do |event_attendee|
