Hide menu for now

--- a/app/views/event_portion_types/index.html.slim
+++ b/app/views/event_portion_types/index.html.slim
@@ -1,6 +1,6 @@
 - content_for :title, "velikosti porcí"
 
-= render "event_attendance/menu"
+/ = render "event_attendance/menu"
 
 div id="#{dom_id(@event)}-portion-types"
   span = "celkem lidí: #{@event.people_count}"
